objects/Hussain_Test__c.object
<CustomObject>
    <fields>
        <fullName>Chiller_Model__c</fullName>
        <label>Chiller Model</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Custom_Field__c</fullName>
        <label>My Custom Field</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id 18 digit</label>
        <type>Text</type>
    </fields>
    <label>Hussain Test</label>
    <nameField>
        <label>Hussain Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hussain Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>